Fix footnotes spacing

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -162,6 +162,7 @@
   ol {
     list-style-position: inside;
     margin: 0;
+    padding: 0;
   }
 }
 
